--- a/nga/index.css
+++ b/nga/index.css
@@ -16,6 +16,15 @@ body{
     transform: translateX(-50%) translateY(-50%);
 }
 
+#drum{
+    width: 8lvh;
+    aspect-ratio: 1;
+
+    background-color: #555;
+
+    border-radius: 50%;
+}
+
 .person{
     width: 10lvh;
     aspect-ratio: 1;
