--- a/nga/index.css
+++ b/nga/index.css
@@ -1,12 +1,57 @@
 body{
     background-color: #333;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+#info{
+    width: 50lvw;
+    height: 10lvh;
+    position: absolute;
+
+    background-color: #555;
+
+    top:12%;
+    left: 50%;
+    transform: translateX(-50%) translateY(-50%);
+
+    color: #FFF;
+
+    font-size: 3lvh;
+
+    align-content: center;
+    text-align: center;
+}
+
+#bullet-container{
+    width: 50lvw;
+    height: 10lvh;
+    position: absolute;
+
+    top: 88%;
+    left: 50%;
+    transform: translateX(-50%) translateY(-50%);
+
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+
+    background-color: #444;
+}
+
+.bullet{
+    height: 80%;
+    width: 10%;
+
+    margin-top: 2%;
+
+    background-color: #AA0;
+
+    border-top-left-radius: 50%;
+    border-top-right-radius: 50%;
 }
 
 #revolver{
     width: 20lvh;
-    aspect-ratio: 1;
-
-    background-color: #444;
 
     top: 50%;
     left: 50%;
@@ -16,13 +61,38 @@ body{
     transform: translateX(-50%) translateY(-50%);
 }
 
+#handle{
+    width: 3lvw;
+    height: 12lvh;
+
+    background-color: #222;
+
+    transform: rotate(30deg);
+}
+
 #drum{
-    width: 8lvh;
+    width: 7lvh;
     aspect-ratio: 1;
+    position: absolute;
 
     background-color: #555;
 
-    border-radius: 50%;
+    top: 20%;
+    left: 30%;
+    transform: translateY(-50%) translateX(-50%);
+}
+
+#rifle{
+    width: 17lvh;
+    height: 3lvh;
+
+    position: absolute;
+
+    background-color: #444;
+
+    top: 15%;
+    left: 50%;
+    transform: translateY(-50%) translateX(-50%);
 }
 
 .person{
@@ -32,18 +102,24 @@ body{
     background-color: #222;
 
     position: absolute;
+
+    align-content: center;
+    text-align: center;
+
+    color: white;
+    font-size: 2lvh;
 }
 
 #player-one{
-    top: 10%;
+    top: 70%;
     left: 50%;
 
-    transform: translateX(-50%);
+    transform: translateX(-50%) translateY(-50%);
 }
 
 #player-two{
-    top: 80%;
+    top: 30%;
     left: 50%;
 
-    transform: translateX(-50%);
+    transform: translateX(-50%) translateY(-50%);
 }
